segunda version sistema